--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting…</title>
-  <!-- 0秒でリダイレクト -->
   <meta http-equiv="refresh" content="0;url=redirect-line.html">
 </head>
 <body>
   <p>ページを移動しています…<br>
-    もし自動で飛ばない場合は<br>
-    <a href="redirect-line.html">こちら</a> をクリック。</p>
+     自動で飛ばない場合は <a href="redirect-line.html">こちら</a> をクリック。</p>
 </body>
 </html>
