--- a/redirect-line.html
+++ b/redirect-line.html
@@ -5,7 +5,7 @@
   <title>LINE 友だち追加</title>
   <!-- GA4 タグ -->
   <!-- Measurement ID をあなたのものに置き換えてください -->
-  <script async src=“https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX”></script>
+  <script async src=“https://www.googletagmanager.com/gtag/js?id=G-ZNWM9V4THB”></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
