--- a/redirect-line.html
+++ b/redirect-line.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang=“ja”>
+<html lang="ja">
 <head>
-  <meta charset=“utf-8">
+  <meta charset="utf-8">
   <title>LINE 友だち追加</title>
-  <!-- GA4 タグ -->
-  <!-- Measurement ID をあなたのものに置き換えてください -->
-  <script async src=“https://www.googletagmanager.com/gtag/js?id=G-ZNWM9V4THB”></script>
+
+  <!-- GA4 タグ：Measurement ID を G-ZNWM9V4THB に置き換え -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNWM9V4THB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag(‘js’, new Date());
-    gtag(‘config’, ‘G-ZNWM9V4THB’);
+    gtag('js', new Date());
+    gtag('config', 'G-ZNWM9V4THB');
   </script>
+
   <!-- 2秒後に公式LINE登録ページへリダイレクト -->
-  <meta http-equiv=“refresh”
-        content=“2;url=https://line.me/R/app/2005655430-9G7j20OP?ic=cRP3eopbk0&whc=171878996586220”>
+  <meta http-equiv="refresh"
+        content="2;url=https://line.me/R/app/2005655430-9G7j20OP?ic=cRP3eopbk0&whc=171878996586220">
 </head>
 <body>
   <p>LINE 友だち追加ページに移動しています…<br>
-     移動しない場合は <a href=“https://line.me/R/app/2005655430-9G7j20OP?ic=cRP3eopbk0&whc=171878996586220”>こちら</a> をクリックしてください。</p>
+    移動しない場合は 
+    <a href="https://line.me/R/app/2005655430-9G7j20OP?ic=cRP3eopbk0&whc=171878996586220">
+      こちら
+    </a> をクリックしてください。</p>
 </body>
 </html>
