--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <p>ページを移動しています…<br>
-     自動で飛ばない場合は <a href="redirect-line.html">こちら</a> をクリック。</p>
+    ここで動かない場合は <a href="redirect-line.html">こちら</a> をクリック。</p>
 </body>
 </html>
